@@ -21,10 +21,11 @@ configurations {
 //}
 
 dependencies {
-    compile group: 'ch.ehi', name: 'ehibasics', version: '1.4.0'
+    compile group: 'ch.ehi', name: 'ehibasics', version: '1.4.1'
+    compile group: 'ch.interlis', name: 'iox-api', version: '1.0.4'
     compile group: 'ch.interlis', name: 'iox-ili', version: '1.21.6+'
-    compile group: 'ch.interlis', name: 'ili2c-tool', version: "5.2.1"
-    compile group: 'ch.interlis', name: 'ili2c-core', version: "5.2.1"
+    compile group: 'ch.interlis', name: 'ili2c-tool', version: "5.2.2+"
+    compile group: 'ch.interlis', name: 'ili2c-core', version: "5.2.2+"
     testCompile group: 'junit', name: 'junit', version: '4.12'
     deployerJars "org.apache.maven.wagon:wagon-ftp:3.3.3"
     deployerJars "org.apache.maven.wagon:wagon-ssh:3.3.3"
@@ -73,7 +74,8 @@ sourceSets {
             srcDirs = ['src','gensrc']
         }
         resources {
-            srcDir "src"
+            srcDirs =[ 'src', 'resources']
+            include 'META-INF/native-image/**'
             include "**/*.properties"
             exclude "**/Version.properties"
         }
